--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ db.sqlite3
 myproject/db.sqlite3
 db.sqlite3-journal
 media
+.DS_Store
 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
